Changes in 3.9.3:
- Bundle Java 21 with Windows and Mac builds
- Updated SWT for all platforms, improved loading of correct SWT library on Linux
- Add support for plugin jars containing their own messages.properties
- Allow plugins to merge multiple ping results
- FileFeeder: recognition of FQDNs (with trailing dots and numbers in TLDs) in IP list files
- FileFeeder: recognition of IPv6 addresses in IP list files
- The UDP pinger now uses the same port as traceroute programs
- Time is now specified in 24-hour format in XML export
- Fix exporting of very long lines as .txt
- Strings up to 255 bytes in length can now be exported to SQL. Among other things, this enables the export of IPv6 scans to SQL

Thanks to @marek22k for many fixes!

Changes in 3.9.2:
- Linux: specify Java 17 as minimum required version in .deb and .rpm packages
- Added Irish translation
- Updated SWT for all platforms
- Updated MAC vendors

Changes in 3.9.1:
- Mac: fix permissions in bundled JRE, so that MAC address scanning would work #384
- Linux startup fix if JAVA_HOME has spaces #391
- Update MAC vendors

Changes in 3.9.0:
- Mac: bundle Java 17 runtime, so that Java doesn't need to be installed separately
- Mac: change next alive host shortcut to Cmd+N (Cmd+H is conflicting with hide window)
- Windows installer: update bundled Java runtime to 17
- Linux XFCE: execute terminal properly #379
- Remember last window position #278
- Faster File Feeder when loading large files #347
- Update SWT for all platforms
- Update MAC vendors

Changes in 3.8.2:
- Allow building if .git is not present (e.g. from source zip) #319
- Windows installer now includes a stripped-down JRE to avoid downloading Java separately
- Windows 32-bit build has been removed
- Linux deb & rpm packages now correctly specify Java 11 dependency, not 8
- Mac: display a notification if java not in PATH #279
- If scanning a local network, then ARP will be used in addition to chosen Pinger to detect more hosts #280