@@ -2,10 +2,11 @@ Changes in 3.9.3:
 - Bundle Java 21 with Windows and Mac builds
 - Updated SWT for all platforms, improved loading of correct SWT library on Linux
 - Add support for plugin jars containing their own messages.properties
+- Add support for Pinger plugins
 - Allow plugins to merge multiple ping results
+- The UDP pinger now uses the same port as traceroute programs
 - FileFeeder: recognition of FQDNs (with trailing dots and numbers in TLDs) in IP list files
 - FileFeeder: recognition of IPv6 addresses in IP list files
-- The UDP pinger now uses the same port as traceroute programs
 - Time is now specified in 24-hour format in XML export
 - Fix exporting of very long lines as .txt
 - Strings up to 255 bytes in length can now be exported to SQL. Among other things, this enables the export of IPv6 scans to SQL
